tests/snapshots/e2e_tests__nested_directory_snapshot.snap
---
source: tests/e2e_tests.rs
assertion_line: 32
expression: output_content
---
hello_word.md:
```
# Hello word!
```

nested/nested.md:
```
## Nested
```


