tests/snapshots/e2e_tests__one_file_in_directory_snapshot.snap
---
source: tests/e2e_tests.rs
assertion_line: 28
expression: output_content
---
tests/fixtures/one_file_in_directory/hello_word.md:
```
# Hello word!
```


