tests/snapshots/e2e_tests__skipping_non_text_file_snapshot.snap
---
source: tests/e2e_tests.rs
assertion_line: 33
expression: output_content
---
hello_word.md:
```
# Hello word!
```


