tests/snapshots/e2e_tests__two_files_in_directory_snapshot.snap
---
source: tests/e2e_tests.rs
assertion_line: 32
expression: output_content
---
first.md:
```
# First file
```

second.md:
```
# Second file
```


